# trying-to-make-a-website-scanner

./: README.md
.agents/skills/testing-asms/: SKILL.md
.github/workflows/: asms-ci.yml
asms/: .gitignore  README.md
asms/api/: README.md  pyproject.toml
asms/api/asms_api/: __init__.py  db.py  main.py  models.py  routes.py  schemas.py  scoring.py  seed.py
asms/api/tests/: conftest.py  test_api.py  test_scoring.py
asms/dashboard/: index.html
asms/dashboard/data/: sample.json
asms/dashboard/js/: dashboard.js
asms/db/: schema.sql
asms/docs/: ARCHITECTURE.md
asms/worker/: README.md  pyproject.toml
asms/worker/asms_worker/: __init__.py  celery_app.py  cli.py  registry.py  tasks.py
asms/worker/asms_worker/checks/: __init__.py  base.py  dns_records.py  headers.py  secrets.py  sensitive_paths.py  tech_disclosure.py  tls.py
asms/worker/tests/: test_dns_records.py  test_headers.py  test_registry.py  test_secrets.py  test_sensitive_paths.py  test_tasks.py  test_tech_disclosure.py  test_tls.py
website-scanner/: README.txt  description.txt  main.py  requirements.txt  run.bat  scanner.py
